Fix timeline line color not adhering to dark mode

--- a/src/app/spotting/vehicle-type-container/spotting-table/inline-timeline/inline-timeline.component.scss
+++ b/src/app/spotting/vehicle-type-container/spotting-table/inline-timeline/inline-timeline.component.scss
@@ -21,7 +21,7 @@
     left: 4px;
     width: 2px;
     height: 40px;
-    background-color: $devui-text;
+    background-color: $devui-form-control-line-hover;
 }
 
 .data-panel-top-line {
@@ -30,5 +30,5 @@
     left: 4px;
     width: 2px;
     height: 40px;
-    background-color: $devui-text;
+    background-color: $devui-form-control-line-hover;
 }
